[gd_scene load_steps=7 format=3 uid="uid://cr01krhwx3m6m"]

[ext_resource type="Texture2D" uid="uid://braiey6axaqd1" path="res://imagenes/fondoblanco.png" id="1_e0660"]
[ext_resource type="Script" uid="uid://tlbpgcm036r6" path="res://scripts/victory_screen.gd" id="1_lsfkp"]
[ext_resource type="Texture2D" uid="uid://ccah0wa0qnupe" path="res://imagenes/victoria.png" id="2_6rtsq"]
[ext_resource type="Texture2D" uid="uid://ursym86rh64d" path="res://imagenes/botonvolverajugarvictoria.png" id="3_lsfkp"]
[ext_resource type="Texture2D" uid="uid://ctrcl6rgbbwsx" path="res://imagenes/botonsalirvictoria.png" id="4_yrjt7"]
[ext_resource type="Texture2D" uid="uid://cwlwcolc1nqlo" path="res://imagenes/btnverpuntitos.png" id="6_yrjt7"]

[node name="victory_screen" type="Node2D"]
script = ExtResource("1_lsfkp")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -576.0
offset_top = -324.0
offset_right = 576.0
offset_bottom = 324.0
texture = ExtResource("1_e0660")

[node name="titulo" type="TextureRect" parent="."]
offset_left = -500.0
offset_top = -304.0
offset_right = 500.0
offset_bottom = -104.0
texture = ExtResource("2_6rtsq")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = -525.0
offset_top = -89.0
offset_right = -37.0
offset_bottom = 120.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 52
text = "Tus puntitos son:"
fit_content = true

[node name="Puntos" type="Label" parent="RichTextLabel"]
layout_mode = 0
offset_left = 204.0
offset_top = 65.0
offset_right = 244.0
offset_bottom = 137.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 52
text = "0"

[node name="IngresarNombre" type="LineEdit" parent="RichTextLabel"]
layout_mode = 0
offset_left = 5.0
offset_top = 132.0
offset_right = 426.0
offset_bottom = 202.0
theme_override_colors/font_placeholder_color = Color(0.60933, 0.60933, 0.60933, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 44
placeholder_text = "pone tu nombre"
alignment = 1
max_length = 8
flat = true

[node name="jugar" type="TextureRect" parent="."]
offset_left = 11.0
offset_top = -91.0
offset_right = 572.0
offset_bottom = 109.0
texture = ExtResource("3_lsfkp")
stretch_mode = 2
metadata/_edit_group_ = true

[node name="botonjugar" type="Button" parent="jugar"]
layout_mode = 0
offset_left = 39.0
offset_top = 27.0
offset_right = 513.0
offset_bottom = 198.0
flat = true

[node name="salir" type="TextureRect" parent="."]
offset_left = 16.0
offset_top = 111.0
offset_right = 577.0
offset_bottom = 311.0
texture = ExtResource("4_yrjt7")
stretch_mode = 2
metadata/_edit_group_ = true

[node name="botonsalir" type="Button" parent="salir"]
layout_mode = 0
offset_left = 107.0
offset_top = 35.0
offset_right = 394.0
offset_bottom = 174.0
flat = true

[node name="VerPuntitos" type="TextureRect" parent="."]
offset_left = -531.0
offset_top = 156.0
offset_right = -31.0
offset_bottom = 262.0
texture = ExtResource("6_yrjt7")
metadata/_edit_group_ = true

[node name="BotonVerPuntitos" type="Button" parent="VerPuntitos"]
layout_mode = 0
offset_right = 487.0
offset_bottom = 99.0
flat = true

[connection signal="pressed" from="jugar/botonjugar" to="." method="_on_botonjugar_pressed"]
[connection signal="pressed" from="salir/botonsalir" to="." method="_on_botonsalir_pressed"]
[connection signal="pressed" from="VerPuntitos/BotonVerPuntitos" to="." method="_on_boton_ver_puntitos_pressed"]
